content but no substance

--- a/index.html
+++ b/index.html
@@ -22,25 +22,24 @@
         <section class="main-section">
             <img class="main-logo" src="assets/alchemy-logo.png"/>
             <h2>
-                Welcome to Alchemy Bootstrap!
+                Welcome to the Bee Test!
             </h2>
-
-            <content>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis exercitationem?
-            </p>
-            <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis exercitationem?
-            </p>
+            <section> In case you didn't already know, honeybees may be the most fascinating social creatures out there, and their bahavior is unique enough to blow your mind. I swear. Really. 
+            </section>
+            <section>
+            Let's talk a little bout the Queen. First off, the title of "Queen" may give us the impressions that she runs the hive. And while much of what the queen does has a behavioual impact on the rest of the hive's deceisions, it isn't accurate to think of her as "in charge". In fact, it is best to think of her as the "Reproductive Slave" of the rest fo the colony. Not so glamous as you may have thought, now is it? During the height of the season she may be laying up to 2000 eggs a day!! 
+            </section>
+            <section>
+            Workers are the bees we see every day on flowers, being adorable, and stinging us when we step on them barefoot in the park. Workers and queen bees are genetically identical, all female, but the queen's reproductive genes were turned on during the larval stage in a way that was not for the workers. Consequently, we can think of the workers as eunuchs of the hive! A worker won't fly out of the hive until she reaches about 2 weeks of age. for those first two weeks, she will be taking care of the other young, feeding the larvae, cleaning the hive, and basically being productive every moment of the day. 
+            </section>
+            <section>
+            The males of the hive may not be as familiar to us. WE call th´m Drines, and their sole purpose if to find and mate with virgin queens. They are so singularly focused that they don't even have the ability to feed themselves. That's right! The workers in the hive will feed the drones between their flights. Drones get to live in this life of luxury, but for only a time. Every drone has a tragic end awaiting them. Their best case scenario is that, having found a queen, a drone will mate with her mid-flight, his genitals exploding into the queen, and his now lifeless corpse then falls ot the gorund. Keep in mind, this is the best-case scenario. Otherwise, at the end of the season, a surviving drone will be an unnecessary burden on a hive. Worker bees will, in July and August, begin their "Drone Eviction". They drag out these wasts of space by their legs and wings and fling them out of the hive. The sad pathetic drones will eventually get the hint, and begin their slow march away from the entrance of the hive, towards a short journey ending in starvation and death.
+        </section>
+        <section>        
+            <button id="launch-button">Start the Buzzing Test!!</button>
+        </section>
+            <section id="results"></section>
+            <section id="follow-up"></section>
 
         </section>
     </main>
