nearly completed draft

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
@@ -14,17 +16,24 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png"/>
+        <div >
+            <img class="bee-border" src="assets/bees-galore.jpg"/>
         </div>
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png"/>
             <h2>
                 Welcome to the Bee Test!
             </h2>
             <section> In case you didn't already know, honeybees may be the most fascinating social creatures out there, and their bahavior is unique enough to blow your mind. I swear. Really. 
+            </section>
+            <section>
+                <h3>In our section, we'll be discussing:</h3>
+                    <ol>
+                        <li>Queens</li>
+                        <li>Workers</li>
+                        <li>Drones</li>
+                    </ol>
             </section>
             <section>
             Let's talk a little bout the Queen. First off, the title of "Queen" may give us the impressions that she runs the hive. And while much of what the queen does has a behavioual impact on the rest of the hive's deceisions, it isn't accurate to think of her as "in charge". In fact, it is best to think of her as the "Reproductive Slave" of the rest fo the colony. Not so glamous as you may have thought, now is it? During the height of the season she may be laying up to 2000 eggs a day!! 
@@ -38,8 +47,19 @@
         <section>        
             <button id="launch-button">Start the Buzzing Test!!</button>
         </section>
-            <section id="results"></section>
-            <section id="follow-up"></section>
+            <span id="results"></span> 
+            <div id="percentage"></div>
+            <div id="follow-up"></div>
+            <div class="hidden" id="hidden">
+                <h3>You earned a few more gems:</h3>
+                    <ul>
+                        <li>One worker will collect 2 teaspoons of honey in it's lifetime </li>
+                        <li>If there are multiple queens in a hive, the queens will battle to the death!! </li>
+                        <li>Due to its antimicrobial properties, honey is occasionally used to dress wounds in hospitals. </li>
+                    </ul>
+
+            </div>
+
 
         </section>
     </main>
